# csi2372-lab3-sol

./: .gitignore  CMakeLists.txt  demo_by_TA.cpp
.github/workflows/: ci.yml
include/: auto_minitask.hpp  debug_utils.hpp  minarray.hpp  miniarray.hpp
src/: auto_minitask.cpp  debug_utils.cpp  minarray.cpp  miniarray.cpp
tests/: auto_task.cpp  dbg_tests.cpp  ma_core.cpp  ma_valuecats.cpp
